--- a/client/src/styles/layout/_topbar.scss
+++ b/client/src/styles/layout/_topbar.scss
@@ -21,7 +21,7 @@
     color: var(--surface-900);
     font-size: 1.5rem;
     font-weight: 500;
-    width: 300px;
+    //width: 300px;
     border-radius: 12px;
 
     img {
