--- a/client/src/styles/_theme.scss
+++ b/client/src/styles/_theme.scss
@@ -9,8 +9,9 @@
   --surface-overlay: var(--p-surface-0);
   --surface-border: var(--p-surface-300);
   --surface-hover: var(--p-surface-200);
+}
 
-  @include dark-mode {
+html[color-scheme=dark] {
     color-scheme: dark;
     --text-color: var(--p-surface-0);
     --surface-ground: var(--p-surface-800);
@@ -19,5 +20,4 @@
     --surface-overlay: var(--p-surface-900);
     --surface-border: var(--p-surface-700);
     --surface-hover: var(--p-surface-600);
-  }
 }
