--- a/client/src/styles/_theme.scss
+++ b/client/src/styles/_theme.scss
@@ -3,6 +3,7 @@
 :root {
   color-scheme: light;
   --text-color: var(--p-surface-700);
+  --text-color-secondary: var(--p-surface-400);
   --surface-ground: var(--p-surface-50);
   --surface-section: var(--p-surface-0);
   --surface-card: var(--p-surface-0);
@@ -14,6 +15,7 @@
 html[color-scheme=dark] {
     color-scheme: dark;
     --text-color: var(--p-surface-0);
+    --text-color-secondary: var(--p-surface-200);
     --surface-ground: var(--p-surface-800);
     --surface-section: var(--p-surface-900);
     --surface-card: var(--p-surface-900);
