--- a/client/src/styles/_theme.scss
+++ b/client/src/styles/_theme.scss
@@ -12,14 +12,14 @@
   --surface-hover: var(--p-surface-200);
 }
 
-html[color-scheme=dark] {
-    color-scheme: dark;
-    --text-color: var(--p-surface-0);
-    --text-color-secondary: var(--p-surface-200);
-    --surface-ground: var(--p-surface-800);
-    --surface-section: var(--p-surface-900);
-    --surface-card: var(--p-surface-900);
-    --surface-overlay: var(--p-surface-900);
-    --surface-border: var(--p-surface-700);
-    --surface-hover: var(--p-surface-600);
+html[color-scheme='dark'] {
+  color-scheme: dark;
+  --text-color: var(--p-surface-0);
+  --text-color-secondary: var(--p-surface-200);
+  --surface-ground: var(--p-surface-800);
+  --surface-section: var(--p-surface-900);
+  --surface-card: var(--p-surface-900);
+  --surface-overlay: var(--p-surface-900);
+  --surface-border: var(--p-surface-700);
+  --surface-hover: var(--p-surface-600);
 }
