--- a/client/src/styles/_theme.scss
+++ b/client/src/styles/_theme.scss
@@ -23,3 +23,8 @@ html[color-scheme='dark'] {
   --surface-border: var(--p-surface-700);
   --surface-hover: var(--p-surface-600);
 }
+
+
+.p-error {
+  color: var(--p-red-400);
+}
