Basic working chore detail view (#27)
* set up chore detail

* create & edit chores

* update primevue

* edit chore tags

* set up notes & iterations

* default date

* print iterations

--- a/client/src/styles/_theme.scss
+++ b/client/src/styles/_theme.scss
@@ -23,3 +23,7 @@ html[color-scheme='dark'] {
   --surface-border: var(--p-surface-700);
   --surface-hover: var(--p-surface-600);
 }
+
+.p-error {
+  color: var(--p-red-400);
+}
