--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -6,7 +6,7 @@ html,
 body {
   font-family: 'Lato', sans-serif;
   color: var(--text-color);
-  background-color: var(--surface-ground);
+  background-color: var(--ground-background);
 }
 
 a {
