--- a/client/src/styles/_theme.scss
+++ b/client/src/styles/_theme.scss
@@ -3,25 +3,31 @@
 :root {
   color-scheme: light;
   --text-color: var(--p-surface-700);
-  --text-color-secondary: var(--p-surface-400);
-  --surface-ground: var(--p-surface-50);
-  --surface-section: var(--p-surface-0);
-  --surface-card: var(--p-surface-0);
-  --surface-overlay: var(--p-surface-0);
-  --surface-border: var(--p-surface-300);
-  --surface-hover: var(--p-surface-200);
+  --text-color-secondary: var(--p-surface-500); // gray-ish
+
+  --card-border: 1px solid var(--p-surface-200);
+  --card-background: #fff;
+
+  --border-color: var(--p-surface-200);
+  --ground-background: var(--p-surface-50);
+  --overlay-background: #fff;
+  --hover-background: var(--p-surface-100);
+  --hover-border-color: var(--p-surface-100);
 }
 
 html[color-scheme='dark'] {
-  color-scheme: dark;
+color-scheme: dark;
   --text-color: var(--p-surface-0);
-  --text-color-secondary: var(--p-surface-200);
-  --surface-ground: var(--p-surface-800);
-  --surface-section: var(--p-surface-900);
-  --surface-card: var(--p-surface-900);
-  --surface-overlay: var(--p-surface-900);
-  --surface-border: var(--p-surface-700);
-  --surface-hover: var(--p-surface-600);
+  --text-color-secondary: var(--p-surface-400); // gray-ish
+
+  --card-border: 1px solid transparent;
+  --card-background: var(--p-surface-900);
+
+  --border-color: var(--p-surface-700);
+  --ground-background: var(--p-surface-950);
+  --overlay-background: var(--p-surface-900);
+  --hover-background: var(--p-surface-800);
+  --hover-border-color: var(--p-surface-500);
 }
 
 .p-error {
