--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -40,16 +40,18 @@
   }
 }
 
-//@mixin dark-mode {
-//  @media (prefers-color-scheme: dark) {
-//    @content;
-//  }
-//}
+@mixin dark-mode {
+  html[color-scheme='dark'] & {
+    @content;
+  }
+}
 
 @mixin white-content-box {
-  background-color: var(--surface-card);
   padding: var(--default-padding);
   border-radius: var(--border-radius);
+
+  background-color: var(--card-background);
+  border: var(--card-border);
 }
 
 @mixin pre-overflow {
