remove old pages and components, print due dates

--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -76,3 +76,45 @@
     }
   }
 }
+
+@mixin ok {
+  background: color-mix(in srgb, var(--p-green-50), transparent 5%);
+  border-color: var(--p-green-200);
+  color: var(--p-green-600);
+  box-shadow: 0px 4px 8px 0px color-mix(in srgb, var(--p-green-500), transparent 96%);
+
+  @include dark-mode {
+    background: color-mix(in srgb, var(--p-green-500), transparent 84%);
+    border-color: color-mix(in srgb, var(--p-green-700), transparent 64%);
+    color: var(--p-green-500);
+    box-shadow: 0px 4px 8px 0px color-mix(in srgb, var(--p-green-500), transparent 96%);
+  }
+}
+
+@mixin almost-due {
+  background: color-mix(in srgb, var(--p-yellow-50), transparent 5%);
+  border-color: var(--p-yellow-200);
+  color: var(--p-yellow-600);
+  box-shadow: 0px 4px 8px 0px color-mix(in srgb, var(--p-yellow-500), transparent 96%);
+
+  @include dark-mode {
+    background: color-mix(in srgb, var(--p-yellow-500), transparent 84%);
+    border-color: color-mix(in srgb, var(--p-yellow-700), transparent 64%);
+    color: var(--p-yellow-500);
+    box-shadow: 0px 4px 8px 0px color-mix(in srgb, var(--p-yellow-500), transparent 96%);
+  }
+}
+
+@mixin overdue {
+  background: color-mix(in srgb, var(--p-red-50), transparent 5%);
+  border-color: var(--p-red-200);
+  color: var(--p-red-600);
+  box-shadow: 0px 4px 8px 0px color-mix(in srgb, var(--p-red-500), transparent 96%);
+
+  @include dark-mode {
+    background: color-mix(in srgb, var(--p-red-500), transparent 84%);
+    border-color: color-mix(in srgb, var(--p-red-700), transparent 64%);
+    color: var(--p-red-500);
+    box-shadow: 0px 4px 8px 0px color-mix(in srgb, var(--p-red-500), transparent 96%);
+  }
+}
