--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -22,10 +22,14 @@
   align-items: center;
   flex-wrap: wrap;
   gap: var(--default-padding);
+}
 
-  .actions {
-    margin-left: auto;
-  }
+@mixin flex-row-actions {
+  @include flex-row;
+  gap: calc(var(--default-padding) / 2);
+  align-items: flex-start;
+  justify-content: flex-end;
+  margin-left: auto;
 }
 
 @mixin media-min-width($min-width) {
