--- a/frontend/app/src/styles/_utilities.scss
+++ b/frontend/app/src/styles/_utilities.scss
@@ -146,3 +146,15 @@
   padding: 0;
   margin: 0;
 }
+
+@mixin info-page {
+  padding-block: 4rem;
+  height: 100%;
+  text-align: center;
+
+  @include flex-column;
+
+  .actions {
+    margin-top: 2rem;
+  }
+}
